<resources>
    <string name="app_name">What\'s For Dinner</string>
    <string name="meals">Meals</string>
    <string name="recipes">Recipes</string>
    <string name="groceries">Groceries</string>
    <string name="newDish">New Dish</string>
    <string name="appInfo">Author: Huy Nguyen\nVersion: 1.3\nFor help, please contact Huy Nguyen\nCopyright @ MVP, Inc.</string>
    <string name="title_activity_new_dish_screen">NewDishScreenActivity</string>
    <string name="recipesNameInputHint">Enter Recipe Name</string>
    <string name="direcionHint">Enter direction for cooking the recipe</string>
    <string name="addNewIngredient">Add New Ingredient</string>
    <string name="enterNewIngredient">Enter New Ingredient</string>
    <string name="save">Save</string>
    <string name="localImageDescription">Click to browse local storage for image of recipe</string>
    <string name="recipeImageDescription">An image showing the recipe. A default image will be provided if none is specified</string>
    <string name="ingredientLabel">Ingredients</string>
    <string name="directionLabel">Cooking Direction</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_recipe_screen">RecipeScreenActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_meal_screen">MealScreenActivity</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="thursday">Thursday</string>
    <string name="sunday">Sunday</string>
    <string name="friday">Friday</string>
    <string name="monday">Monday</string>
    <string name="nutrition_manager">Nutrition Manager</string>
    <string name="saturday">Saturday</string>
    <string name="_0">0</string>
    <string name="calcium">Calcium</string>
    <string name="calories">Calories</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="fat">Fat</string>
    <string name="met">Met</string>
    <string name="nutrition">Nutrition</string>
    <string name="planned_values">Planned Values</string>
    <string name="protein">Protein</string>
    <string name="sodium">Sodium</string>
    <string name="target_values">Target Values</string>
    <string name="update_goals">Update Goals</string>
    <string name="_0_by_default_in_g">0 by default (in g)</string>
    <string name="urlInputPrompt">Enter URL for image if using online resource, then click add image button (leave blank if choosing local image from gallery)</string>
    <string name="recipe_name">Recipe Name</string>
</resources>
